# aisp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  ruff.toml
config/: cron.sh  crontab.txt  markets.toml  prompts.toml  sectors.toml  symbols.toml  ths_boards.json  watchlist.toml
config/launchd/: com.aisp.close.plist  com.aisp.morning.plist  com.aisp.telegram.plist  install.sh
docs/: data-factors.md
scripts/: scrape_ths_sectors.py  sync-env.sh
src/aisp/: __init__.py  cli.py  config.py  logging_config.py  tui.py  watch_nlp.py
src/aisp/data/: __init__.py  btc_risk.py  calendar.py  cn_market.py  commodities.py  market_data.py  symbols.py  us_market.py
src/aisp/data/sources/: __init__.py  akshare_announcements.py  base.py  xueqiu.py
src/aisp/db/: engine.py  models.py
src/aisp/engine/: agent.py  analyzer.py  llm_client.py  prompts.py  signals.py
src/aisp/portfolio/: importer.py  ocr.py
src/aisp/report/: briefing.py
src/aisp/review/: tracker.py
src/aisp/screening/: breakout.py  factor_engine.py  indicators.py  sector_pools.py  stock_scorer.py  trading_plan.py  wyckoff.py
src/aisp/telegram/: bot.py  dedup.py  formatter.py
tests/: README.md  test_breakout.py  test_data.py  test_factor_engine.py  test_indicators.py  test_integration.py  test_market_data.py  test_trading_plan.py  test_wyckoff.py
