[project]
name = "aisp"
version = "0.1.0"
description = "A-Share Intelligence & Strategy Pilot - next-day trading guidance system"
readme = "README.md"
authors = [
    { name = "016hiro", email = "ljj0618@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "typer>=0.15",
    "rich>=13.0",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "playwright>=1.58.0",
    "tomlkit>=0.14.0",
    "langchain-openai>=0.3",
    "deepagents>=0.4",
    "ddgs>=7.0",
    "textual>=0.50",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2",
    "akshare>=1.10",
    "baostock>=0.8.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]
all = ["aisp[data,dev]"]

[project.scripts]
aisp = "aisp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/aisp"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
